# nvHive

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EULA.md  HIVE.md.example  LICENSE  Makefile  PRIVACY.md  README.md  config.example.yaml  docker-compose.cloud.yaml  docker-compose.yaml  install-mac.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
channel-plugin/: nvhive-channel.ts  package.json
docs/: ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  COMMANDS.md  CONFIGURATION.md  COUNCIL.md  GETTING_STARTED.md  HARDWARE.md  LINUX_DESKTOP.md  NEMOCLAW.md  NVIDIA_DEVELOPER_BRIEF.md  OPENCLAW_MIGRATION.md  ORCHESTRATION.md  PROVIDERS.md  SDK_API.md  STUDENTS.md  TESTING_GUIDE.md  TOOLS.md  WEBUI.md  WORKFLOWS.md  capture_gif.mjs  capture_screenshots.mjs
docs/proposals/: CLAUDE_CODE_ALIGNMENT_PROPOSAL.md  CLAUDE_CODE_CHANNELS_INTEGRATION.md
nvh/: __init__.py  mcp_server.py  sdk.py
nvh/api/: proxy.py  server.py
nvh/auth/: auth.py  models.py
nvh/cli/: completions.py  conversations.py  main.py  repl.py
nvh/config/: capabilities.yaml  nemoclaw-blueprint.yaml  quality_benchmarks.yaml  settings.py
nvh/core/: action_detector.py  advisor_profiles.py  agent_loop.py  agents.py  benchmark.py  context.py  context_files.py  council.py  engine.py  file_lock.py  free_tier.py  hooks.py  image_gen.py  knowledge.py  learning.py  memory.py  notify.py  orchestrator.py  quality_benchmark.py  rate_limiter.py  router.py  scheduler.py  smart_query.py  smoke_test.py  system_tools.py  templates.py  tools.py  voice.py  webhooks.py  workflows.py
nvh/integrations/: cloud_session.py  detector.py  hostname.py  openclaw.py  service.py
nvh/plugins/: manager.py
nvh/providers/: ai21_provider.py  anthropic_provider.py  base.py  cerebras_provider.py  cohere_provider.py  deepseek_provider.py  fireworks_provider.py  github_provider.py  google_provider.py  grok_provider.py  groq_provider.py  huggingface_provider.py  llm7_provider.py  mistral_provider.py  mock_provider.py  nvidia_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  perplexity_provider.py  quota_info.py  registry.py  sambanova_provider.py  siliconflow_provider.py  together_provider.py  triton_provider.py
nvh/sandbox/: executor.py
nvh/storage/: models.py  repository.py
nvh/utils/: environment.py  gpu.py  logging.py  sanitize.py  streaming.py
nvh/workflows/: code_review.yaml  (+2 more)
scripts/: cloud-setup.sh  demo.sh  install.sh  migrate.sh  ollama-setup.sh  portable-setup.sh  setup.sh
tests/: test_action_detector.py  test_agents.py  test_api.py  test_cli_e2e.py  test_council.py  test_file_lock.py  test_integration.py  test_integrations.py  test_learning.py  test_mcp_server.py  test_nemoclaw.py  test_openclaw.py  test_orchestrator.py  test_providers.py  test_router.py  test_tools.py  test_webui_e2e.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+29 files in other folders)
